[tool.poetry]
name = "Beginner.Codes Python Runner Bot"
version = "0.1.0"
description = "A simple Python runner bot for Discord. Originally created for the Beginner.Codes Discord server."
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.8.0"
pyyaml = "^5.3.1"
nextcord = "^2.0.0-alpha.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
